--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,18 +1,17 @@
 # Install a Debian (Jessie) OS with Python 2.7 and Pip installed
-FROM resin/raspberrypi3-python:2.7
+FROM balenalib/%%BALENA_MACHINE_NAME%%-python:3-stretch-run
+
+RUN install_packages apt-utils
+RUN install_packages i2c-tools
+RUN install_packages python3-smbus
 
 # use apt-get if you need to install dependencies,
 RUN apt-get update && apt-get install -yq --no-install-recommends \
-	  python-smbus=3.1.1+svn-2 && \
-   	apt-get clean && rm -rf /var/lib/apt/lists/*
+	python3-envirophat
+
 
 # Define our working directory in the container
 WORKDIR /usr/src/app
-
-# Copy requirements.txt first for better cache on later pushes
-COPY ./requirements.txt requirements.txt
-# pip install python deps from requirements.txt
-RUN pip install -r requirements.txt
 
 # Copy all our project into /usr/src/app/ folder in the container.
 COPY . .
