--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,26 +1,30 @@
-# Install a Debian (Jessie) OS with Python 2.7 and Pip installed
+# install a Debian image with Python 3 installed
 FROM balenalib/%%BALENA_MACHINE_NAME%%-python:3-stretch-run
 
 RUN install_packages apt-utils
 RUN install_packages i2c-tools
 RUN install_packages python3-smbus
 
-# use apt-get if you need to install dependencies,
+# use apt-get if you need to install dependencies
 RUN apt-get update && apt-get install -yq --no-install-recommends \
-	python3-envirophat
+	python3-envirophat \
+	libraspberrypi-bin
 
 
-# Define our working directory in the container
+# define our working directory in the container
 WORKDIR /usr/src/app
 
-# Copy all our project into /usr/src/app/ folder in the container.
-COPY . .
+# copy all our project into /usr/src/app/ folder in the container.
+COPY . ./
+
 # So in our container we should now have:
 # /usr/src/app/
 #           |── Dockerfile
-#           |── requirements.txt
 #           └── project
 #               └── main.py
 
-# Load up the i2c module and launch our project
-CMD modprobe i2c-dev && python -u project/main.py
+# load up the i2c module
+CMD modprobe i2c-dev
+
+# launch our project
+CMD ["python", "-u", "project/main.py"]
